--- a/_posts/2019-12-23-the-us-narrative-today.html
+++ b/_posts/2019-12-23-the-us-narrative-today.html
@@ -1668,5 +1668,108 @@ stories:
   state: Texas
   domain: http://www.dailytimes.com/
   link: https://www.glasgowdailytimes.com/news/grant-to-fund-field-trips-to-mammoth-cave-for-local/article_ee19585c-25af-11ea-82f6-9724c00ae4e3.html
+images:
+- name: oldcabin-oldcabin-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-alien-goggles.jpg
+- name: flower-barbed-wire-flower-barbed-wire-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-diego-rivera1.jpg
+- name: white-house-lawn-white-house-window-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-colorful-blocks.jpg
+- name: abe-lincoln-one-wols-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-wols-file-00-00-00-00.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-internet-numbers.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-internet-numbers.JPG
+- name: abe-lincoln-one-post-modern-file-00-00-07-91.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-post-modern-file-00-00-07-91.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-umberto-bocc.jpg
+- name: death-valley-death-valley-national-park-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-crafty-painting.jpg
+- name: stories-granaryfield-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-granaryfield-dali-three.jpg
+- name: death-valley-death-valley-national-park.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park.jpg
+- name: supreme-court-supremecourt-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-kandinsky-bv.jpg
+- name: lincoln-memorial-lincolnmemorial-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-post-modern.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-blue-circuit-3.jpg
+- name: lincoln-memorial-lincolnmemorial-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-gred-mash.jpg
+- name: old-door-lock-old-door-lock-2-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-dry-skin.jpg
+- name: nazi-invasion-piano-in-street-good.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-piano-in-street-good.jpg
+- name: locked-up-steam-lock-up-steam-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-spagetti-accident.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-blue-circuit.jpg
+- name: oldhouse-oldhouse-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-alberto-giacometti.jpg
+- name: amusement-park-amusement-park-2-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-gan-vogh.jpg
+- name: old-granary-field-oldhouse-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-pablo-blue.jpg
+- name: aws-s3-stories-crypto-machine-bletchley-copper-circuit.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-crypto-machine-bletchley-copper-circuit.png
+- name: stalin-time-castle-clouds-green-lawn.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-castle-clouds-green-lawn.jpg
+- name: hollywood-building-hollywood-building-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-rainbow-festival.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-constitution.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-constitution.JPG
+- name: rockingchair-face-2-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-atari-asteroids.jpg
+- name: braceros-domingo-ulloa-skulls-catacomb-up-close.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-skulls-catacomb-up-close.jpg
+- name: oldhouse-granaryfield-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-oily-mcoilface.jpg
+- name: old-school-house-old-schoolhouse-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-free-woman.jpg
+- name: yosemite-yosemite-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-green-zuma.jpg
+- name: la-muse-google-front-of-business.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-google-front-of-business.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-blue-circuit.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-blue-circuit.JPG
+- name: meadowbutterfly-meadow-butterfly-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-alien-goggles.jpg
+- name: supreme-court-supremecourt-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-creativity.jpg
+- name: old-school-house-old-schoolhouse-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-clean-view.jpg
+- name: stories-soldier-computer-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-soldier-computer-dark-dali.jpg
+- name: mediterranean-mediterranean-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-nazi-poster.jpg
+- name: status-berlin-status-berlin-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-kand-two.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-really-hot.jpg
+- name: docks-docks-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-crafty-painting.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-mucha-mult.jpg
+- name: san-francisco-street-view-san-francisco-street-view-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-clean-view.jpg
+- name: store-on-corner-store-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-light-dali.jpg
+- name: old-granary-field-granaryfield-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-yellow-collage.jpg
+- name: scream-DSC_0027.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-DSC_0027.jpg
+- name: braceros-domingo-ulloa-gypsy-house-with-pen.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-gypsy-house-with-pen.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-atari-missle.jpg
+- name: old-school-house-old-schoolhouse-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-oily-mcoilface.jpg
+- name: christianity-christianity-under-construction-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-blue-circuit-3.jpg
+- name: statue-face-open-mouth-statue-face-open-mouth-blue-circuit.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-blue-circuit.png
+- name: walled-garden-walled-garden-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-oily-mcoilface.jpg
 ---
 Beautiful But Missing Something.&nbsp;Residents Asked To Keep City Hydrants Visible.&nbsp;Eveleth Police Searching For Missing Woman And Baby Daughter.&nbsp;Reasons Why Termites Infest Your Home And How To Avoid It.&nbsp;Santa's Elves Again Bring Christmas Cheer To Dundalk.&nbsp;You Are Our North Star.&nbsp;Two McClatchy Papers Cutting Frequency.&nbsp;Online Classes Keep Football Players Out Of Academic Fray.&nbsp;
